<resources>
    <string name="app_name" translatable="false">Stock Streaks</string>
    <string name="app_name_initials" translatable="false">&#160;SS&#160;</string>

    <!-- Admob -->
    <string name="interstitial_ad_unit_id" translatable="false">
        ca-app-pub-3940256099942544/1033173712
    </string>

    <!-- Analytics -->
    <string name="analytics_category" translatable="false">Symbol Event</string>
    <string name="analytics_action_add" translatable="false">Symbol Add</string>
    <string name="analytics_label_add_placeholder" translatable="false">Add %1$s</string>

    <!-- TagManager (Analytics config in xml folder) -->
    <string name="tag_manager_motd_container_id" translatable="false"></string>
    <string name="tag_manager_motd_key" translatable="false">msg_of_the_day</string>

    <string name="tag_manager_symbol_add_event_name" translatable="false">Symbol Add</string>
    <string name="tag_manager_screen_view_bar_chart_event_name" translatable="false">Screen View Bar Chart</string>

    <string name="tag_manager_event_category_key" translatable="false">event_category</string>
    <string name="tag_manager_event_action_key" translatable="false">event_action</string>
    <string name="tag_manager_event_label_key" translatable="false">event_label</string>
    <string name="tag_manager_screen_view_bar_chart_key" translatable="false">screen_view_bar_chart</string>

    <string name="tag_manager_event_category" translatable="false">Symbol Event</string>
    <string name="tag_manager_event_action" translatable="false">Symbol Add</string>
    <string name="tag_manager_placeholder_event_label" translatable="false">Add %1$s</string>
    <string name="tag_manager_placeholder_screen_view_bar_chart" translatable="false">Bar Chart Activity %1$s</string>

    <!-- Navigation menu -->
    <string name="navigation_motd">Message of the Day</string>
    <string name="navigation_faq">FAQ</string>
    <string name="navigation_about">About</string>
    <string name="navigation_google_play">Google Play</string>

    <!-- Overflow menu -->
    <string name="overflow_refresh">Refresh</string>
    <string name="overflow_sort">Sort</string>

    <!-- Toolbar menu -->
    <string name="search_hint">Add Symbol...</string>
    <string name="logo_typeface_path" translatable="false">fonts/harlowsi.TTF</string>

    <!-- Logo -->
    <string name="logo_font_name">harlowsi.TTF</string>

    <!-- Sort dialog-->
    <string name="sort_alphabetical">Alphabetical</string>
    <string name="sort_streak">Streak</string>
    <string name="sort_change_dollar">$ Change</string>
    <string name="sort_change_percent">% Change</string>
    <string name="sort_recent_close">Recent Close</string>
    <string name="sort_ascending">Ascending (Lowest First)</string>
    <string name="sort_descending">Descending (Highest First)</string>

    <!-- Toast msgs -->
    <string name="toast_error_retrieving_data">Error retrieving data from server</string>
    <string name="toast_list_out_of_sync">List out of sync. Please refresh list</string>
    <string name="toast_list_is_up_to_date">List is up to date</string>
    <string name="toast_symbol_not_found">Symbol not found</string>
    <string name="toast_empty_search">Please enter a symbol</string>
    <string name="toast_no_network">No Network Connection</string>
    <string name="toast_chart_data_not_yet_available">Chart data not yet loaded</string>

    <string name="toast_placeholder_symbol_exists">%1$s already exists</string>
    <string name="toast_placeholder_error_stock_limit">Unable to exceed max limit of %1$d stocks</string>

    <!-- RecyclerView-->
    <string name="empty_list_msg">Use the search box above\nto add a stock.</string>

    <!-- Content description-->
    <string name="content_description_stock_arrow">Stock arrow</string>
    <string name="content_description_button_refresh">Refresh</string>
    <string name="content_description_button_bar_chart">Bar Chart</string>
    <string name="content_description_back">Back</string>

    <!-- detail fragment strings-->
    <string name="recent_close">Recent Close:</string>
    <string name="percent_change">% Change:</string>
    <string name="dollar_change">$ Change:</string>
    <string name="streak">Streak:</string>
    <string name="last_streak_price">Prev. Streak \nEnd Price:</string>
    <string name="prev_streak">Prev. Streak:</string>
    <string name="streak_year_high">365 Day \nStreak High:</string>
    <string name="streak_year_low">365 Day \nStreak Low:</string>
    <string name="offset_negative_sign">-</string>

    <!-- Bar Chart-->
    <string name="bar_chart_placeholder_description">%1$s 365 Day Streaks</string>
    <string name="bar_chart_negative_color_label">Negative Streak</string>
    <string name="bar_chart_positive_color_label">Positive Streak</string>

    <!-- list_item load a few-->
    <string name="button_retry">RETRY</string>

    <!-- Snackbar -->
    <string name="placeholder_snackbar_main_text">%1$s removed</string>
    <string name="snackbar_action_text">UNDO</string>

    <!--MainAdapter-->
    <string name="placeholder_change_amt">%1$s(%2$s)</string>
    <string name="placeholder_dollar">$%1$s</string>
    <string name="placeholder_percent">%1$s%%</string>
    <string name="placeholder_day">%1$s day</string>
    <string name="placeholder_days">%1$s days</string>
    <string name="placeholder_d">%1$sd</string>
    <string name="placeholder_update_time">Updated: %1$s</string>
    <string name="update_time_format" translatable="false">EEEE, MMMM dd @&#160;h:mm&#160;a</string>

    <!-- Widget -->
    <string name="widget_empty_list">No Information Available</string>
    <string name="widget_button_load_more">LOAD MORE</string>

    <!-- Navigation menu item dialogs -->
    <string name="dialog_close">CLOSE</string>
    <string name="dialog_motd">Thanks for downloading the app. This is where I\'ll post some
        important messages, so check here often!</string>

    <string name="dialog_faq"><b>What do the $/% changes reflect?</b>
        \nThe $/% changes reflect the TOTAL change from its previous streak and not the change
        from its previous close like you would normally see. It gives a better perspective on how
        much a stock has changed over the course of its streak.

        \n\n<b>Is the stock data real-time?</b>
        \nNo, the app only displays information from its most recent regular hours close.

        \n\n<b>Are all stocks supported?</b>
        \nNo, the app currently only supports stocks from NASDAQ/NYSE.

        \n\n<b>When can I refresh the stock list?</b>
        \nThe stock list can be refreshed at 4:30 PM EST. I am aware that markets close at 4:00 PM,
        but due to limitations of the API there is a delay in the updating of prices.

        \n\n<b>Is there a limit to how many stocks I can add?</b>
        \nYes, to stay within API quota limits, the list is limited to 200 stocks.

        \n\n<b>Do you have a widget?</b>
        \nYes, depending on if your device supports it, I have created a widget you can use on your
        home screen. When you enable the widget, you\'ll also enable automatic updates.
    </string>

    <string name="dialog_about"><b>Stock Streaks v1.0.0</b>
        \n\nThis app was created as my final project towards my Android
        Developer Nanodegree which is a program developed together by Udacity and Google.

        \n\nStock Streaks was an idea I had when out of curiosity I just wanted to find out how
        many days in a row a stock has gone up or down. This information might not be of any special
        importance, but maybe some of you might still find it interesting nonetheless.

        \n\nIt took me about a period of four months to complete everything, so I hope
        you like it!
    </string>
</resources>
