<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        style="@style/DetailColumnsCommon.TextSize.LeftCommon.DetailExtrasLeft"
        android:layout_width="0dp"
        android:text="@string/last_streak_price"
        app:layout_columnWeight="1"/>

    <TextView
        style="@style/DetailColumnsCommon.TextSize.DetailRight"
        android:id="@+id/text_streak_end_price_prev"
        android:layout_width="0dp"
        android:textColor="@color/white"
        android:gravity="bottom"
        app:layout_gravity="fill_vertical"
        app:layout_columnWeight="1"
        android:text="$543.34"
        tools:text="$543.34"/>

    <TextView
        style="@style/DetailColumnsCommon.TextSize.LeftCommon.DetailExtrasLeft"
        android:layout_width="0dp"
        android:text="@string/last_streak"
        app:layout_columnWeight="1"/>

    <LinearLayout
        style="@style/DetailColumnsCommon.DetailLinearLayoutRight"
        android:layout_width="0dp"
        android:orientation="horizontal"
        android:gravity="bottom"
        app:layout_gravity="fill_vertical"
        app:layout_columnWeight="1">

        <TextView
            android:id="@+id/text_streak_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/column_item_text_size"
            android:textColor="@color/white"
            android:text="33 days"
            tools:text="33 days"/>

        <ImageView
            android:id="@+id/image_streak_arrow_last"
            android:layout_width="@dimen/stock_arrow_size_normal"
            android:layout_height="@dimen/stock_arrow_size_normal"
            android:contentDescription="@string/content_description_stock_arrow"
            android:src="@drawable/ic_stock_up"
            tools:src="@drawable/ic_stock_up"/>
    </LinearLayout>

    <TextView
        style="@style/DetailColumnsCommon.TextSize.LeftCommon.DetailExtrasLeft"
        android:layout_width="0dp"
        android:text="@string/streak_year_high"
        app:layout_columnWeight="1" />

    <LinearLayout
        style="@style/DetailColumnsCommon.DetailLinearLayoutRight"
        android:layout_width="0dp"
        android:orientation="horizontal"
        android:gravity="bottom"
        app:layout_gravity="fill_vertical"
        app:layout_columnWeight="1">

        <TextView
            android:id="@+id/text_streak_year_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/column_item_text_size"
            android:textColor="@color/white"
            android:text="33 days"
            tools:text="33 days"/>

        <ImageView
            android:id="@+id/image_streak_arrow_year_high"
            android:layout_width="@dimen/stock_arrow_size_normal"
            android:layout_height="@dimen/stock_arrow_size_normal"
            android:contentDescription="@string/content_description_stock_arrow"
            android:src="@drawable/ic_stock_up"
            tools:src="@drawable/ic_stock_up"/>
    </LinearLayout>

    <TextView
        style="@style/DetailColumnsCommon.TextSize.LeftCommon.DetailExtrasLeft"
        android:layout_width="0dp"
        android:text="@string/streak_year_low"
        app:layout_columnWeight="1" />

    <LinearLayout
        style="@style/DetailColumnsCommon.DetailLinearLayoutRight"
        android:layout_width="0dp"
        android:orientation="horizontal"
        android:gravity="bottom"
        app:layout_gravity="fill_vertical"
        app:layout_columnWeight="1">

        <TextView
            android:id="@+id/text_streak_year_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/column_item_text_size"
            android:textColor="@color/white"
            android:text="33 days"
            tools:text="33 days"/>

        <ImageView
            android:id="@+id/image_streak_arrow_year_low"
            android:layout_width="@dimen/stock_arrow_size_normal"
            android:layout_height="@dimen/stock_arrow_size_normal"
            android:contentDescription="@string/content_description_stock_arrow"
            android:src="@drawable/ic_stock_down"
            tools:src="@drawable/ic_stock_down"/>
    </LinearLayout>

    <android.support.v7.widget.Space
        app:layout_columnSpan="2"/>

</merge>