<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_extras_section"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/detail_section_vertical_padding"
    android:paddingBottom="@dimen/detail_section_vertical_padding"
    android:background="@color/colorPrimaryDarker">

    <android.support.v7.widget.GridLayout
        android:id="@+id/detail_extras_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:columnCount="2">

        <TextView
            style="@style/DetailColumnsCommon.TextSize.LeftCommon.DetailExtrasLeft"
            android:layout_width="0dp"
            android:text="@string/last_streak_price"
            app:layout_columnWeight="1"/>

        <TextView
            style="@style/DetailColumnsCommon.TextSize.DetailRight"
            android:id="@+id/text_prev_streak_end_price"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:gravity="bottom"
            app:layout_gravity="fill_vertical"
            app:layout_columnWeight="1"
            tools:text="$543.34"/>

        <TextView
            style="@style/DetailColumnsCommon.TextSize.LeftCommon.DetailExtrasLeft"
            android:layout_width="0dp"
            android:text="@string/prev_streak"
            app:layout_columnWeight="1"/>

        <LinearLayout
            style="@style/DetailColumnsCommon.DetailLinearLayoutRight"
            android:layout_width="0dp"
            android:orientation="horizontal"
            app:layout_gravity="fill_vertical"
            app:layout_columnWeight="1">

            <TextView
                android:id="@+id/text_streak_prev_neg_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_column_item_text_size"
                android:textColor="@color/white"
                android:text="@string/offset_negative_sign"
                android:visibility="invisible"/>

            <TextView
                android:textAppearance="@style/DetailExtrasDaysTextView"
                android:id="@+id/text_streak_prev"
                android:layout_width="@dimen/detail_extras_days_text_view_width"
                android:layout_height="wrap_content"
                tools:text="-3 days"/>

            <ImageView
                style="@style/StreakArrow"
                android:id="@+id/image_prev_streak_arrow"
                android:layout_width="@dimen/stock_arrow_size_normal"
                android:layout_height="@dimen/stock_arrow_size_normal"
                tools:ignore="ContentDescription"
                tools:src="@drawable/ic_streak_up"/>
        </LinearLayout>

        <TextView
            style="@style/DetailColumnsCommon.TextSize.LeftCommon.DetailExtrasLeft"
            android:layout_width="0dp"
            android:text="@string/streak_year_high"
            app:layout_columnWeight="1" />

        <LinearLayout
            style="@style/DetailColumnsCommon.DetailLinearLayoutRight"
            android:layout_width="0dp"
            android:orientation="horizontal"
            app:layout_gravity="fill_vertical"
            app:layout_columnWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_column_item_text_size"
                android:textColor="@color/white"
                android:text="@string/offset_negative_sign"
                android:visibility="invisible"/>

            <TextView
                android:textAppearance="@style/DetailExtrasDaysTextView"
                android:id="@+id/text_streak_year_high"
                android:layout_width="@dimen/detail_extras_days_text_view_width"
                android:layout_height="wrap_content"
                tools:text="3 days"/>

            <ImageView
                style="@style/StreakArrow"
                android:id="@+id/image_streak_arrow_year_high"
                android:layout_width="@dimen/stock_arrow_size_normal"
                android:layout_height="@dimen/stock_arrow_size_normal"
                android:src="@drawable/ic_streak_up"
                tools:ignore="ContentDescription"/>
        </LinearLayout>

        <TextView
            style="@style/DetailColumnsCommon.TextSize.LeftCommon.DetailExtrasLeft"
            android:layout_width="0dp"
            android:text="@string/streak_year_low"
            app:layout_columnWeight="1" />

        <LinearLayout
            style="@style/DetailColumnsCommon.DetailLinearLayoutRight"
            android:layout_width="0dp"
            android:orientation="horizontal"
            app:layout_gravity="fill_vertical"
            app:layout_columnWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_column_item_text_size"
                android:textColor="@color/white"
                android:text="@string/offset_negative_sign"
                android:visibility="visible"/>

            <TextView
                android:textAppearance="@style/DetailExtrasDaysTextView"
                android:id="@+id/text_streak_year_low"
                android:layout_width="@dimen/detail_extras_days_text_view_width"
                android:layout_height="wrap_content"
                tools:text="3 days"/>

            <ImageView
                style="@style/StreakArrow"
                android:id="@+id/image_streak_arrow_year_low"
                android:layout_width="@dimen/stock_arrow_size_normal"
                android:layout_height="@dimen/stock_arrow_size_normal"
                android:src="@drawable/ic_streak_down"
                tools:ignore="ContentDescription"/>
        </LinearLayout>
    </android.support.v7.widget.GridLayout>

    <ProgressBar
        android:id="@+id/progress_wheel"
        android:layout_width="@dimen/progress_wheel_size"
        android:layout_height="@dimen/progress_wheel_size"
        android:layout_centerInParent="true"
        android:visibility="visible"/>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:text="@string/button_retry"
        android:visibility="invisible"
        android:contentDescription="@string/button_retry"/>


    <!-- This button bar chart button might seem out of place from the main section bar chart
    button, but I could not get the ripple selector to work. Some bug with the ripple not working
     if it is placed on top of a background color that's not in its View/ ViewGroup
     http://stackoverflow.com/questions/35151406/ -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            style="@style/BarChartButton"
            android:id="@+id/button_extras_section_bar_chart"
            android:layout_width="@dimen/bar_chart_button_size"
            android:layout_height="@dimen/bar_chart_button_size"
            tools:ignore="ContentDescription"/>
    </FrameLayout>

</RelativeLayout>